--- a/tell-dont-ask-kata-java/pom.xml
+++ b/tell-dont-ask-kata-java/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>it.gabrieletondi</groupId>
-    <artifactId>tell-dont-ask-kata</artifactId>
+    <artifactId>tell-dont-ask-kata-java</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
