--- a/tell-dont-ask-kata-typescript/package.json
+++ b/tell-dont-ask-kata-typescript/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "jest"
+    "test": "jest --watch"
   },
   "author": "Eduard Maura <edu.maura.puig@gmail.com>",
   "repository": "https://github.com/mapu77/tell-dont-ask-kata",
